--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
     "howler": "^2.2.1",
     "husky": "^4.3.7",
     "marked": "^1.2.7",
-    "node-sass": "4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-draggable": "^4.3.1",
-    "react-scripts": "4.0.1",
+    "react-draggable": "^4.4.5",
+    "react-scripts": "^5.0.1",
     "react95": "^3.5.0",
     "recoil": "^0.1.2",
     "styled-components": "^5.2.1"
@@ -49,5 +48,10 @@
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "sass": "^1.89.2"
   }
 }
